<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="horizontal">
<LinearLayout
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_veg_type"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/veg"
            />
        <TextView
            android:id="@+id/list_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            style="@style/RestuarantNames"
            android:textStyle="bold"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/list_menu_name"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_name"
        style="@style/MenuType"
        />
    <TextView
        android:id="@+id/list_full_food_price"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_price_full"
        style="@style/SubMenuType"
        />
    <TextView
        android:id="@+id/list_food_indegridients"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_indegridients"
        style="@style/MenuType"
        />
    <TextView
        android:id="@+id/list_food_dish_customization"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_dish_customization"
        style="@style/SubType"
        />
</LinearLayout>

   <!-- <android.support.design.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/list_btn_add_food"
        android:textColor="@color/textGreen"
        android:textAllCaps="false"
        android:minWidth="100dp"
        app:icon="@drawable/ic_action_add"
        app:iconTintMode="add"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        android:width="4dp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/textGreen"
        app:strokeWidth="2dp"
        android:drawableTint="@color/transparent"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_food_dish"
        />-->
    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/btn_full_quick_cart"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        app:backGroundColor="#008000"
        app:finalNumber="20"
        app:initialNumber="0"
        app:textSize="8sp"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/btn_full_quick_add"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="#008000"
        android:gravity="center"
        android:text="Add"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />
</LinearLayout>
