<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/screenone"
        tools:ignore="ContentDescription" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">
   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       android:layout_margin="10dp"
        android:background="@color/white"
        android:text="@string/sign_up_page"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
       tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="@android:color/holo_green_light"
        android:text="@string/delivery_location"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingLeft="40sp"
            android:text="@string/sign_up_page_msg"
            android:textAlignment="center"
            android:textColor="#3E2723"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <Button
            android:padding="10dp"
            android:textAllCaps="false"
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@android:color/holo_green_light"
            android:text="@string/sign_up_page_cont"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</LinearLayout>