<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/maintop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <ImageView
            android:id="@+id/navigationnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_menu_black_24dp"
            android:tint="#000000"
            tools:ignore="ContentDescription,RtlHardcoded,VectorDrawableCompat" />

     <!--   <com.andremion.counterfab.CounterFab
            android:id="@+id/btnCart"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            tools:ignore="VectorDrawableCompat"
            app:backgroundTint="@android:color/white"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            app:elevation="2dp"
            app:pressedTranslationZ="2dp"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:useCompatPadding="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_below="@id/navigationnn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            tools:ignore="NotSibling" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_below="@id/maintop"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/user_location"
            style="@style/UserLocation"
            android:layout_marginBottom="5dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_user_location"

                />

            <TextView

                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxEms="6"
                android:maxLines="1"
                android:text=""
                android:hint="@string/user_address_hint"
                style="UserLocationValue"
                tools:ignore="HardcodedText"
                android:layout_weight="0.5"
                />

            <TextView

                android:id="@+id/change"
                style="@style/User_Green_Font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="change"
                android:gravity="right"
                android:text="@string/user_change" />

        </LinearLayout>

    </LinearLayout>
  <!--  <LinearLayout
        android:id="@+id/search_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/search">
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_hint_restuarants"
            android:iconifiedByDefault="false"
            android:layout_alignParentTop="true"
            />


    </LinearLayout>-->
    <include layout="@layout/ads_layout"/>


       <android.support.v7.widget.CardView
        android:id="@+id/offer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/ads"
        android:orientation="vertical"
           tools:ignore="UnknownIdInLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="-5dp"
                android:layout_toLeftOf="@+id/app_icon"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="FIRST ORDER OFFER"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Use Code FIRSTCUBO60 FOR 60% off on your first order."
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

   <!-- <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/offer_layout"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />-->

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/offer_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderRestuarantsRecommendations"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/restuarant_list_recommendation_header"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderRestuarantsRecommendations"
                android:layout_margin="10dp"
                android:text="@string/header_restuarant_list"
                android:gravity="left"/>
                <TextView
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textGreen"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:text="@string/header_restuarant_list_see_all"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:scrollbars="vertical" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>