<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_cusine_1"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:minHeight="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/food_1"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:fillViewport="true"
        android:scrollbars="vertical"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_below="@id/restaurant_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detail_restaurant_name_sub"
                    style="@style/RestuarantNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Restuarant Name" />

                <TextView
                    android:id="@+id/detail_restaurant_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/textGreen"
                    android:text="3.6"
                    android:textColor="@color/white"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/UserLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/detail_retaurant_list_ratings_header" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/rating" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/UserLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/detail_retaurant_list_delivery_place_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/green_arrow"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="User Location"
                        android:src="@drawable/icon_user_location"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/user_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="146dp"
                        android:layout_marginRight="146dp"
                        android:layout_marginBottom="-6dp"
                        android:text="Rajouri Garden"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <!--<TextView
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_address_change"
                        android:text="@string/user_change"
                        android:layout_marginRight="10dp"
                        style="@style/User_Green_Font" />-->
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Delivery in 33 minutes.Live tracking available"
                    android:textColor="#FF7F50"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <Switch
                    android:id="@+id/vegSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/dish_type_veg"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />

                <TextView
                    style="@style/HeaderRestuarantsRecommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_type_best_sellers" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v4.widget.SwipeRefreshLayout
                        android:id="@+id/swipe_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_food_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />

                    </android.support.v4.widget.SwipeRefreshLayout>

                    <com.andremion.counterfab.CounterFab
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom|end"
                        android:src="@drawable/ic_shopping_cart_black_24dp"
                        app:backgroundTint="#3CB371"
                        tools:ignore="VectorDrawableCompat" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
